# ClientServer

./: CMakeLists.txt  CMakeSettings.json  Command.txt
.github/workflows/: ClientServer.yml
ClientServer/: CMakeLists.txt  ClientServer.cpp  ClientServer.h  OSDefines.h
ClientServer/Client/: CMakeLists.txt  main.cpp  submain.cpp
ClientServer/ConnectionTools/: CMakeLists.txt  ConnectionInterface.cpp  ConnectionInterface.h  TCPConnection.cpp  TCPConnection.h
ClientServer/ConnectionTools/Headers/: ConnectedDevice.h  ConnectionLostInfo.h  OneThread.h  TCPConnection.h  UDPConnection.h
ClientServer/ConnectionTools/Sources/: ConnectionInterface.cpp  ConnectionLostInfo.cpp  OneThread.cpp  TCPConnection.cpp  UDPConnection.cpp
ClientServer/Server/: CMakeLists.txt  main.cpp  submain.cpp
enc_temp_folder/39ce6ee9437fd98ae7445260d696f6e6/: TCPConnection.cpp
enc_temp_folder/d69f7bf113597099d2bfea10f1d7836a/: OneThread.cpp
enc_temp_folder/de7b36cd43162fe6777f8016615f3641/: UDPConnection.cpp
